--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
 	url = https://github.com/dillonzq/LoveIt.git
+[submodule "public"]
+	path = public
+	url = https://github.com/renownchurch/renownchurch.github.io.git
+	branch = master
